--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "robustjumprope <91493312+robustjumprope@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
